# Life-Hs

./: Life-HS.cabal  README.md  life.hs  test.life
app/: Main.hs
programs/: glider.life  spaceship.life
