name:                Life-HS
version:             0.1.0.0
synopsis:            Conway's Game of Life
-- description:
homepage:            https://github.com/414owen/Life-Hs
license:             BSD3
author:              Owen Shepherd
maintainer:          414owen@gmail.com
copyright:           2017 Owen Shepherd
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Life
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ansi-terminal
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/414owen/Life-Hs
